[tool.poetry]
name = "insta-agent"
version = "0.1.0"
description = "Automate your instagram with llm agents"
authors = ["Zai <130903099+zaibutcooler@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
